# JKAT

./: .coverage  .gitignore  Readme.md  license.txt  main.py  matplotlib_testing.py  pyproject.toml
JKAT.egg-info/: PKG-INFO  requires.txt  top_level.txt
examples/: ex01_making_an_orbit.ipynb  ex02_additional_orbits_and_plots.ipynb
src/: __init__.py
src/JKAT/: __init__.py
src/JKAT/ephemeris/: JPL_ephemeris.txt  examples.py  realtime.py
src/JKAT/kep/: __init__.py  orbits.py
src/JKAT/plotting/: plot.py
src/JKAT/trajectories/: direct.py  porkchop.py
src/JKAT/utils/: __init__.py  anomalies.py  consts.py  misc.py  optim.py  optimizers.py  vectors.py
src/Trajectories/: __init__.py  direct.py  porkchop.py
src/ephemeris/: __init__.py  examples.py  realtime.py
src/jkat/: __init__.py
src/jkat/ephemeris/: ISO.py  JPLHorizons.cache  JPLHorizons.py  __init__.py  examples.py  realtime.py
src/jkat/kep/: __init__.py  determination.py  orbits.py
src/jkat/plotting/: __init__.py  plot.py
src/jkat/trajectories/: direct.py  porkchop.py  simple.py
src/jkat/utils/: anomalies.py  consts.py  elements.py  optimizers.py  vectors.py
src/kep/: __init__.py  determination.py  orbits.py  solvers.py
src/plotting/: plot.py
src/utils/: __init__.py  anomalies.py  consts.py  elements.py  misc.py  optim.py  vectors.py
tests/: test_curtis.py  test_direct_transfer.py  test_timings.py
