[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "JKAT"
version = "0.0.1"
authors = [
  { name="Johannes Nilsson"},
]

description = "Johannes Kepler Astrodynamical Toolbox - An easy to use tool for orbital analysis and mission planning (WIP)"
readme = "Readme.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/TunedRockets/JKAT"
Issues = "https://github.com/TunedRockets/JKAT/issues"